# Not-An-SSG

./: .gitignore  README.md  articles_css.css  demo_comprehensive.md  generated.html  generated10.html  generated2.html  generated3.html  hello.py  not_an_ssg.py  not_an_ssg_re-write.py  pyproject.toml  r2_bucket.py  setup.py  syntax_test.md
Not_An_SSG/: __init__.py  not_an_ssg.py  pyproject.toml
not_an_ssg/: pyproject.toml
