[project]
name = "not-an-ssg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.10",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
