[project]
name = "not_an_ssg"
version = "2.0.0"
description = "A minimal static site generator for technical blogs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.37.10",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
